--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         }
         .thumbnail {
             width: 100%;
-            height: 120px;
-            flex-shrink: 0;
+            aspect-ratio: 16 / 9; /* Força a proporção de 16:9 */
+            flex-shrink: 0; /* Evita que a miniatura encolha */
         }
         .thumbnail .participant-name {
             font-size: 0.7rem;
