--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
         .blinking-icon {
             animation: blinking 1.5s infinite;
         }
-        /* Novo: Animação para emojis flutuantes */
         @keyframes float-up {
             0% { transform: translateY(0) scale(1); opacity: 1; }
             100% { transform: translateY(-80px) scale(1.5); opacity: 0; }
@@ -91,18 +90,19 @@
             transform: translateX(-50%);
             font-size: 2rem;
             animation: float-up 2s ease-out forwards;
-            pointer-events: none; /* Para não interferir com cliques no vídeo */
+            pointer-events: none;
         }
     </style>
 </head>
 <body class="bg-gray-900 text-white flex flex-col h-screen overflow-hidden">
 
     <div id="entry-modal" class="fixed inset-0 bg-gray-900 z-50 flex items-center justify-center">
-        <div class="bg-gray-800 p-8 rounded-lg shadow-xl text-center">
+        <div class="bg-gray-800 p-8 rounded-lg shadow-xl text-center w-full max-w-md">
             <h2 class="text-2xl font-bold mb-4">Entrar na Reunião</h2>
-            <p class="text-gray-400 mb-6">Por favor, insira o seu nome para continuar.</p>
-            <form id="entry-form">
-                <input type="text" id="name-input" class="w-full bg-gray-700 text-white rounded-md p-3 mb-4 text-center text-lg focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="O seu nome" required>
+            <p class="text-gray-400 mb-6">Insira o seu nome e o nome da sala.</p>
+            <form id="entry-form" class="space-y-4">
+                <input type="text" id="name-input" class="w-full bg-gray-700 text-white rounded-md p-3 text-center text-lg focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="O seu nome" required>
+                <input type="text" id="room-input" class="w-full bg-gray-700 text-white rounded-md p-3 text-center text-lg focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Nome da Sala" required>
                 <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-md transition-colors">Entrar na Chamada</button>
             </form>
         </div>
@@ -137,6 +137,7 @@
         </div>
 
         <div class="flex items-center justify-end space-x-6 text-gray-400 w-1/3">
+            <span id="room-name-display" class="text-sm text-gray-400"></span>
             <i id="connection-status" class="fas fa-circle text-red-500" title="Desconectado"></i>
         </div>
     </header>
@@ -183,6 +184,7 @@
 
     <script>
         let localUserName = '';
+        let roomName = '';
         let localStream = null;
         let screenStream = null;
         let isScreenSharing = false;
@@ -480,7 +482,10 @@
             }
         }
 
-        async function start() {
+        async function start(room) {
+            roomName = room;
+            document.getElementById('room-name-display').innerText = `Sala: ${roomName}`;
+            
             try {
                 localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
                 createPlayerContainer('local', localStream, localUserName);
@@ -491,7 +496,7 @@
             }
 
             const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
-            const wsUrl = `${protocol}//${window.location.host}/ws`;
+            const wsUrl = `${protocol}//${window.location.host}/ws/${roomName}`;
             ws = new WebSocket(wsUrl);
 
             ws.onopen = () => {
@@ -828,13 +833,15 @@
             const entryForm = document.getElementById('entry-form');
             const entryModal = document.getElementById('entry-modal');
             const nameInput = document.getElementById('name-input');
+            const roomInput = document.getElementById('room-input');
 
             entryForm.addEventListener('submit', (e) => {
                 e.preventDefault();
                 localUserName = nameInput.value.trim();
-                if (localUserName) {
+                const roomName = roomInput.value.trim();
+                if (localUserName && roomName) {
                     entryModal.classList.add('hidden');
-                    start();
+                    start(roomName);
                 }
             });
 
@@ -861,7 +868,6 @@
                 renderDownloadsList();
                 downloadsModal.classList.remove('hidden');
                 downloadsModal.classList.add('flex');
-                // Para a notificação a piscar quando o modal é aberto
                 downloadsBtn.classList.remove('blinking-icon');
             });
 
@@ -888,7 +894,6 @@
                 sendChatMessage();
             });
 
-            // Eventos do Painel de Participantes
             const participantsBtn = document.getElementById('participants-btn');
             const closeParticipantsBtn = document.getElementById('close-participants-btn');
             const raiseHandBtn = document.getElementById('raise-hand-btn');
@@ -900,7 +905,6 @@
             closeParticipantsBtn.addEventListener('click', toggleParticipantsPanel);
             raiseHandBtn.addEventListener('click', toggleRaiseHand);
 
-            // Novo: Eventos para as reações com emoji
             document.querySelectorAll('.emoji-reaction').forEach(emojiBtn => {
                 emojiBtn.addEventListener('click', (e) => {
                     sendEmojiReaction(e.target.innerText);
