--- a/index.html
+++ b/index.html
@@ -125,13 +125,15 @@
             </div>
             <button id="participants-btn" title="Ver participantes" class="control-btn bg-gray-700 hover:bg-gray-600 transition-colors rounded-full p-3"><i class="fas fa-users w-6 h-6"></i></button>
             <button id="chat-btn" title="Abrir chat" class="control-btn bg-gray-700 hover:bg-gray-600 transition-colors rounded-full p-3"><i class="fas fa-comments w-6 h-6"></i></button>
-            <button id="copy-link-btn" title="Copiar link do convite" class="control-btn bg-gray-700 hover:bg-gray-600 transition-colors rounded-full p-3 hidden"><i class="fas fa-link w-6 h-6"></i></button>
+            <button id="file-share-btn" title="Partilhar ficheiro" class="control-btn bg-gray-700 hover:bg-gray-600 transition-colors rounded-full p-3"><i class="fas fa-paperclip w-6 h-6"></i></button>
+            <button id="downloads-btn" title="Ver ficheiros recebidos" class="control-btn bg-gray-700 hover:bg-gray-600 transition-colors rounded-full p-3"><i class="fas fa-download w-6 h-6"></i></button>
             <div class="w-px h-6 bg-gray-600 mx-2"></div>
             <button id="leave-btn" title="Sair da chamada" class="bg-red-600 hover:bg-red-700 transition-colors rounded-full p-3 px-4"><i class="fas fa-phone-slash w-6 h-6"></i></button>
         </div>
 
         <div class="flex items-center justify-end space-x-6 text-gray-400 w-1/3">
             <span id="room-name-display" class="text-sm text-gray-400"></span>
+            <button id="copy-link-btn" title="Copiar link do convite" class="control-btn bg-gray-700 hover:bg-gray-600 transition-colors rounded-full p-2 hidden"><i class="fas fa-link w-6 h-6"></i></button>
             <i id="connection-status" class="fas fa-circle text-red-500" title="Desconectado"></i>
         </div>
     </header>
